fixed voting table position on mobile

--- a/static/main/styles/style.css
+++ b/static/main/styles/style.css
@@ -125,7 +125,7 @@
 
 .dataTables_wrapper {
     position: absolute !important;
-    width: 214px !important;
+    width: 256px !important;
     bottom: 65px !important;
     right: 60px !important;
 }
