--- a/static/styles/table.css
+++ b/static/styles/table.css
@@ -78,6 +78,7 @@ table.dataTable tbody td {
 #voting-system{
     display: inherit;
     position: relative;
+    width: 400px;
 }
 
 #bandname-submit{
